--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -46,7 +46,10 @@
 				spring-cloud-starter-netflix-hystrix
 			</artifactId>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
