--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -4,7 +4,11 @@ server:
 spring:
   application:
     name: consumer
-
+  sleuth:
+    sampler:
+      probability: 1.0
+  zipkin:
+    base-url: http://localhost:9411/
 eureka:
   client:
     service-url:
@@ -15,4 +19,5 @@ eureka:
 feign:
   hystrix:
     enabled: true
+
 
