--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
     password: password
     url: jdbc:h2:mem:testdb
     username: sa
+  sleuth:
+    sampler:
+      probability: 1.0
+  zipkin:
+    base-url: http://localhost:9411/
         
 eureka:
   client:
