--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -5,6 +5,9 @@ spring:
     config:
       uri:
       - http://localhost:8888
+  profiles:
+    active:
+    - dev
       
 management:
   endpoints:
